# IroelProject

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  ComponentsClass.cpp  ComponentsClass.h  Iroel_Project.cpp  Iroel_Project.h  ObjectClass.cpp  ObjectClass.h  README.md  RendererGL.cpp  RendererGL.h  defs.h
Geometry/: Coordinate.cpp  Coordinate.h  Edge.cpp  Edge.h  Geometry.h  Triangle.cpp  Triangle.h
